# product-testing-web-scraper

./: .env.template  .gitignore  .gitlint  .pre-commit-config.yaml  .secrets.baseline  README.md  main.py  old_main.py  pyproject.toml  requirements.txt  scrapy.cfg
scraper/: items.py  middlewares.py  pipelines.py  settings.py
scraper/spiders/: main_spider.py
